--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
     <div class="container">
         <div class="traffic-light">
             <div class="panel">
-                <div class="light light-off">
+                <div id="red" class="light light-off">
 
                 </div>
-                <div class="light light-off">
+                <div id="yellow" class="light yellow-light">
 
                 </div>
-                <div class="light green-light">
+                <div id="green" class="light light-off">
 
                 </div>
             </div>
         </div>
 
-        <button>Click Me</button>
+        <button onclick="changeTrafficLight()">Click Me</button>
     </div>
+
+    <script src="javascript.js"></script>
     
 </body>
 </html>
